Added : required functions
